--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>Clone page</title>
   </head>
   <body>
     <!-- Navigation -->
